// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST server.js DELETE /:id , should return error message when graph with the specified id is not found 1`] = `
Object {
  "error": "Graph not found",
}
`;

exports[`TEST server.js DELETE /:id , should return success message when id=graph_1 deleted 1`] = `
Object {
  "success": "Graph deleted!",
}
`;

exports[`TEST server.js GET / route , should return graphs 1`] = `
Array [
  Object {
    "data": Object {
      "edges": Array [
        Object {
          "source": "nd_1",
          "target": "nd_2",
        },
        Object {
          "source": "nd_1",
          "target": "nd_3",
        },
        Object {
          "source": "nd_1",
          "target": "nd_4",
        },
      ],
      "nodes": Array [
        Object {
          "id": "nd_1",
          "label": "Node 1",
        },
        Object {
          "id": "nd_2",
          "label": "Node 2",
        },
        Object {
          "id": "nd_3",
          "label": "Node 3",
        },
        Object {
          "id": "nd_4",
          "label": "Node 4",
        },
      ],
    },
    "id": "grph_1",
    "name": "Graph 1",
  },
  Object {
    "data": Object {
      "edges": Array [
        Object {
          "source": "nd_1",
          "target": "nd_2",
        },
      ],
      "nodes": Array [
        Object {
          "id": "nd_1",
          "label": "Node 1",
        },
        Object {
          "id": "nd_2",
          "label": "Node 2",
        },
      ],
    },
    "id": "grph_2",
    "name": "Graph 2",
  },
  Object {
    "data": Object {
      "edges": Array [
        Object {
          "source": "nd_1",
          "target": "nd_2",
        },
        Object {
          "source": "nd_1",
          "target": "nd_3",
        },
        Object {
          "source": "nd_1",
          "target": "nd_4",
        },
        Object {
          "source": "nd_1",
          "target": "nd_5",
        },
      ],
      "nodes": Array [
        Object {
          "id": "nd_1",
          "label": "Node 1",
        },
        Object {
          "id": "nd_2",
          "label": "Node 2",
        },
        Object {
          "id": "nd_3",
          "label": "Node 3",
        },
        Object {
          "id": "nd_4",
          "label": "Node 4",
        },
        Object {
          "id": "nd_5",
          "label": "Node 5",
        },
        Object {
          "id": "nd_6",
          "label": "Node 6",
        },
      ],
    },
    "id": "grph_3",
    "name": "Graph 3",
  },
]
`;

exports[`TEST server.js GET /:id , should return error message when graph with the specified id is not found 1`] = `"Not found"`;

exports[`TEST server.js GET /:id , should return graph where id=graph_1 1`] = `
Object {
  "data": Object {
    "edges": Array [
      Object {
        "source": "nd_1",
        "target": "nd_2",
      },
      Object {
        "source": "nd_1",
        "target": "nd_3",
      },
      Object {
        "source": "nd_1",
        "target": "nd_4",
      },
    ],
    "nodes": Array [
      Object {
        "id": "nd_1",
        "label": "Node 1",
      },
      Object {
        "id": "nd_2",
        "label": "Node 2",
      },
      Object {
        "id": "nd_3",
        "label": "Node 3",
      },
      Object {
        "id": "nd_4",
        "label": "Node 4",
      },
    ],
  },
  "id": "grph_1",
  "name": "Graph 1",
}
`;

exports[`TEST server.js POST / , should return error if name is null 1`] = `
Object {
  "error": "Invalid params",
}
`;

exports[`TEST server.js POST / , should return the successfully inserted new graph object 1`] = `
Object {
  "data": Object {},
  "id": "grph_27",
  "name": "Grph_27",
}
`;
